[package]
name = "ash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[features]
default = ["base-import", "btrfs", "grub", "import", "apt"]
apt = []
base-import = []
btrfs = ["dep:libbtrfs"]
dnf = []
grub = []
import = []
lock = []
pacman = ["dep:users"]

[dependencies]
chrono = "0.4.31"
clap = "4.1.8"
configparser = { version = "3.0.2", features = ["indexmap"] }
csv = "1.2.2"
ctrlc = "3.4.2"
curl = "0.4.44"
libbtrfs = { version = "0.0.12", optional = true }
nix = "0.26.2"
partition-identity = "0.3.0"
proc-mounts = "0.3.0"
pyo3 = {version = "0.21.2", features = ["auto-initialize"]}
rustix = "0.38.8"
tempfile = "3.8.0"
users = { version = "0.11.0", optional = true }
walkdir = "2.3.3"

[build-dependencies]
clap = "4.1.8"
clap_complete = "4.4.10"
